--- a/App.json
+++ b/App.json
@@ -1,7 +1,7 @@
 [
   {
-    "Title": "Apple Support",
-    "Dev": "Apple",
+    "Title": "Unc0ver",
+    "Dev": "Pwn2Own",
     "version": "1.0",
     "Status": "Active",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
