--- a/App.json
+++ b/App.json
@@ -10,7 +10,7 @@
     "Web": "https://support.apple.com",
     "Banner": "https://support.apple.com",
     "Icon": "icon",
-    "Message": "Hello"
+    "Message": "The Most Advanced Jailbreak Tool"
     "What's New": "Hello"
   }
 ]
