--- a/App.json
+++ b/App.json
@@ -2,7 +2,7 @@
   {
     "Title": "Unc0ver",
     "Dev": "Pwn2Own",
-    "version": "1.0",
+    "Version": "8.0.2",
     "Status": "Active",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
     "AltStore": "https://appinstallerios.com/plist/unc0ver.plist",
