--- a/App.json
+++ b/App.json
@@ -7,7 +7,7 @@
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
     "AltStore": "https://appinstallerios.com/plist/unc0ver.plist",
     "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
-    "Web": "https://support.apple.com",
+    "Web": "https://unc0ver.dev",
     "Banner": "https://support.apple.com",
     "Icon": "icon",
     "Message": "The Most Advanced Jailbreak Tool"
