--- a/App.json
+++ b/App.json
@@ -6,6 +6,7 @@
     "Status": "Active",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
     "AltStore": "https://appinstallerios.com/plist/unc0ver.plist",
+    "Scarlet": "https://appinstallerios.com/plist/unc0ver.plist",
     "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
     "Web": "https://unc0ver.dev",
     "Banner": "https://support.apple.com",
