--- a/App.json
+++ b/App.json
@@ -13,5 +13,6 @@
     "Icon": "icon",
     "Message": "The Most Advanced Jailbreak Tool"
     "What's New": "Hello"
+    "Open App": "unc0ver://"
   }
 ]
