--- a/App.json
+++ b/App.json
@@ -11,8 +11,8 @@
     "Web": "https://unc0ver.dev",
     "Banner": "https://support.apple.com",
     "Icon": "icon",
-    "Message": "The Most Advanced Jailbreak Tool"
-    "What's New": "Hello"
+    "Message": "The Most Advanced Jailbreak Tool",
+    "What's New": "Bug Fixes",
     "Open App": "unc0ver://"
   }
 ]
