--- a/App.json
+++ b/App.json
@@ -9,7 +9,7 @@
     "Scarlet": "https://appinstallerios.com/plist/unc0ver.plist",
     "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
     "Web": "https://unc0ver.dev",
-    "Banner": "https://support.apple.com",
+    "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Icon": "icon",
     "Message": "The Most Advanced Jailbreak Tool",
     "What's New": "Bug Fixes",
