--- a/App.json
+++ b/App.json
@@ -12,7 +12,7 @@
     "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Icon": "icon",
     "Message": "The Most Advanced Jailbreak Tool",
-    "What's New": "Bug Fixes",
-    "Open App": "unc0ver://"
+    "whatsnew": "Bug Fixes",
+    "OpenApp": "unc0ver://"
   }
 ]
