--- a/App.json
+++ b/App.json
@@ -3,7 +3,7 @@
     "Title": "Unc0ver",
     "Dev": "Pwn2Own",
     "Version": "8.0.2",
-    "Status": "Active",
+    "Status": "UnActive",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
     "AltStore": "https://appinstallerios.com/plist/unc0ver.plist",
     "Scarlet": "https://appinstallerios.com/plist/unc0ver.plist",
