--- a/App.json
+++ b/App.json
@@ -3,10 +3,8 @@
     "Title": "Unc0ver",
     "Dev": "Pwn2Own",
     "Version": "8.0.2",
-    "Active": "True",
+    "Active": "False",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
-    "AltStore": "https://appinstallerios.com/plist/unc0ver.plist",
-    "Scarlet": "https://appinstallerios.com/plist/unc0ver.plist",
     "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
     "Web": "https://unc0ver.dev",
     "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
