--- a/App.json
+++ b/App.json
@@ -3,7 +3,7 @@
     "Title": "Unc0ver",
     "Dev": "Pwn2Own",
     "Version": "8.0.2",
-    "Active": "False",
+    "Active": "True",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
     "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
     "Web": "https://unc0ver.dev",
