--- a/App.json
+++ b/App.json
@@ -5,7 +5,7 @@
     "Version": "8.0.2",
     "Active": "True",
     "Install": "https://appinstallerios.com/plist/unc0ver.plist",
-    "IPA": "https://appinstallerios.com/plist/unc0ver.plist",
+    "IPA": "https://unc0ver.dev/downloads/8.0.2/9e44edfbfd1905cadf23c3b9ad1d5bed683ce061/unc0ver_Release_8.0.2.ipa",
     "Web": "https://unc0ver.dev",
     "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Icon": "https://icons.appinstallerios.com/Unc0verIcon.png",
