--- a/App.json
+++ b/App.json
@@ -9,7 +9,7 @@
     "Web": "https://unc0ver.dev",
     "Icon": "https://icons.appinstallerios.com/Unc0verIcon.png",
     "Message": "The Most Advanced Jailbreak Tool",
-    "whatsnew": "Bug Fixes",
+    "Twitter": "https://twitter.com/appinstallerios",
     "OpenApp": "unc0ver://"
   }
 ]
