--- a/TopApps.json
+++ b/TopApps.json
@@ -17,6 +17,6 @@
   {
     "Title": "Cercube 5",
     "Banner": "https://appinstallerios.com/Img/CercubeBanner.png",
-    "Install": "https://appinstallerios.com/plist/AppInstalleriOS.plist"
+    "Install": "https://appinstallerios.com/plist/Cercube.plist"
   }
 ]
