--- a/TopApps.json
+++ b/TopApps.json
@@ -12,7 +12,7 @@
   {
     "Title": "Saily",
     "Banner": "https://appinstallerios.com/Img/SailyBanner.png",
-    "Install": "https://appinstallerios.com/plist/AppInstalleriOS.plist"
+    "Install": "https://appinstallerios.com/plist/Saily.plist"
   },
   {
     "Title": "Cercube 5",
