--- a/TopApps.json
+++ b/TopApps.json
@@ -7,7 +7,7 @@
   {
     "Title": "unc0ver",
     "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
-    "Install": "https://appinstallerios.com/plist/AppInstalleriOS.plist"
+    "Install": "https://appinstallerios.com/plist/unc0ver.plist"
   },
   {
     "Title": "Saily",
