--- a/TopApps.json
+++ b/TopApps.json
@@ -2,7 +2,7 @@
   {
     "Title": "Taurine",
     "Banner": "https://appinstallerios.com/Img/TaurineBanner.png",
-    "Install": "https://appinstallerios.com/plist/AppInstalleriOS.plist"
+    "Install": "https://appinstallerios.com/plist/Taurine.plist"
   },
   {
     "Title": "unc0ver",
