--- a/Apps.json
+++ b/Apps.json
@@ -1,7 +1,7 @@
 [
   {
     "AppName": "unc0ver",
-    "AppIcon": "https://AppInstallerios.com/Img/Signed.png",
+    "AppIcon": "https://icons.appinstallerios.com/Unc0verIcon.png",
     "AppPlist": "35e47034b43e4097b0e6515b08034f01"
   },
   {
