--- a/Apps.json
+++ b/Apps.json
@@ -18,5 +18,10 @@
     "AppName": "Cercube 5",
     "AppIcon": "https://icons.appinstallerios.com/CercubeIcon.png",
     "AppPlist": "https://appinstallerios.com/plist/Cercube.plist"
+  }.
+  {
+    "AppName": "Saily",
+    "AppIcon": "https://icons.appinstallerios.com/SailyIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/Saily.plist"
   }
 ]
