--- a/TopApps.json
+++ b/TopApps.json
@@ -6,7 +6,7 @@
   },
   {
     "Title": "unc0ver",
-    "Banner": "https://appinstallerios.com/Img/unc0verBanner.png",
+    "Banner": "https://appinstallerios.com/AppResources/Banner/unc0ver.png",
     "Install": "https://appinstallerios.com/AppResources/Plist/unc0ver.plist"
   },
   {
