--- a/TopApps.json
+++ b/TopApps.json
@@ -1,7 +1,7 @@
 [
   {
     "Title": "Taurine",
-    "Banner": "https://appinstallerios.com/Img/TaurineBanner.png",
+    "Banner": "https://appinstallerios.com/AppResources/Banner/Taurine.png",
     "Install": "https://appinstallerios.com/AppResources/Plist/Taurine.plist"
   },
   {
