--- a/TopApps.json
+++ b/TopApps.json
@@ -11,17 +11,17 @@
   },
   {
     "Title": "Saily",
-    "Banner": "https://appinstallerios.com/Img/SailyBanner.png",
+    "Banner": "https://appinstallerios.com/AppResources/Banner/Saily.png",
     "Install": "https://appinstallerios.com/AppResources/Plist/Saily.plist"
   },
   {
     "Title": "Cercube 5",
-    "Banner": "https://appinstallerios.com/Img/CercubeBanner.png",
+    "Banner": "https://appinstallerios.com/AppResources/Banner/Cercube.png",
     "Install": "https://appinstallerios.com/AppResources/Plist/Cercube.plist"
   },
   {
     "Title": "ZiniTevi",
-    "Banner": "https://appinstallerios.com/Img/ZiniTeviBanner.png",
+    "Banner": "https://appinstallerios.com/AppResources/Banner/ZiniTevi.png",
     "Install": "https://appinstallerios.com/AppResources/Plist/ZiniTevi.plist"
   }
 ]
