--- a/AppSlider.json
+++ b/AppSlider.json
@@ -1,22 +1,38 @@
 [
   {
-    "Title": "Taurine",
-    "Banner": "https://appinstallerios.com/AppResources/Banner/Taurine.png",
-    "Install": "https://appinstallerios.com/AppResources/Plist/Taurine.plist"
+    "AppName": "unc0ver",
+    "AppDeveloper": "unc0ver-Team",
+    "AppIcon": "https://icons.appinstallerios.com/Unc0verIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/unc0ver.plist",
+    "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
+    "Twitter": "unc0verTeam",
+    "Website": "https://unc0ver.dev",
+    "Screenshot1": "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png",
+    "AppSlider": true
   },
   {
-    "Title": "unc0ver",
-    "Banner": "https://appinstallerios.com/AppResources/Banner/unc0ver.png",
-    "Install": "https://appinstallerios.com/AppResources/Plist/unc0ver.plist"
+    "AppName": "Taurine",
+    "AppDeveloper": "Odyssey-Team",
+    "AppIcon": "https://icons.appinstallerios.com/TaurineIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/Taurine.plist",
+    "AppBanner": "https://appinstallerios.com/Img/TaurineBanner.png",
+    "Twitter": "OdysseyTeam_",
+    "Website": "https://taurine.app",
+    "Screenshot1": "https://appinstallerios.com/Screenshots/TaurineScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/TaurineScreenshot2.png",
+    "AppSlider": true
   },
   {
-    "Title": "Saily",
-    "Banner": "https://appinstallerios.com/AppResources/Banner/Saily.png",
-    "Install": "https://appinstallerios.com/AppResources/Plist/Saily.plist"
-  },
-  {
-    "Title": "ZiniTevi",
-    "Banner": "https://appinstallerios.com/AppResources/Banner/ZiniTevi.png",
-    "Install": "https://appinstallerios.com/AppResources/Plist/ZiniTevi.plist"
+    "AppName": "Saily",
+    "AppDeveloper": "Saily Team",
+    "AppIcon": "https://icons.appinstallerios.com/SailyIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/Saily.plist",
+    "AppBanner": "https://appinstallerios.com/Img/SailyBanner.png",
+    "Twitter": "TrySaily",
+    "Website": "https://sailyteam.github.io",
+    "Screenshot1": "https://appinstallerios.com/Screenshots/SailyScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/SailyScreenshot2.png",
+    "AppSlider": true
   }
 ]
