--- a/AppSlider.json
+++ b/AppSlider.json
@@ -7,9 +7,8 @@
     "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Twitter": "unc0verTeam",
     "Website": "https://unc0ver.dev",
-    "Screenshot1": "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png",
-    "AppSlider": true
+    "Screenshot1": "",
+    "Screenshot2": ""
   },
   {
     "AppName": "Taurine",
@@ -19,9 +18,8 @@
     "AppBanner": "https://appinstallerios.com/Img/TaurineBanner.png",
     "Twitter": "OdysseyTeam_",
     "Website": "https://taurine.app",
-    "Screenshot1": "https://appinstallerios.com/Screenshots/TaurineScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/TaurineScreenshot2.png",
-    "AppSlider": true
+    "Screenshot1": "",
+    "Screenshot2": ""
   },
   {
     "AppName": "Saily",
