--- a/AppSlider.json
+++ b/AppSlider.json
@@ -29,8 +29,7 @@
     "AppBanner": "https://appinstallerios.com/Img/SailyBanner.png",
     "Twitter": "TrySaily",
     "Website": "https://sailyteam.github.io",
-    "Screenshot1": "https://appinstallerios.com/Screenshots/SailyScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/SailyScreenshot2.png",
-    "AppSlider": true
+    "Screenshot1": "",
+    "Screenshot2": ""
   }
 ]
