--- a/AppSlider.json
+++ b/AppSlider.json
@@ -31,5 +31,16 @@
     "Website": "https://sailyteam.github.io",
     "Screenshot1": "",
     "Screenshot2": ""
+  },
+    {
+    "AppName": "ZiniTevi",
+    "AppDeveloper": "",
+    "AppIcon": "https://icons.appinstallerios.com/ZiniTeviIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/ZiniTevi.plist",
+    "AppBanner": "https://appinstallerios.com/Img/ZiniTeviBanner.png",
+    "Twitter": "",
+    "Website": "https://sailyteam.github.io",
+    "Screenshot1": "",
+    "Screenshot2": ""
   }
 ]
