--- a/AppSlider.json
+++ b/AppSlider.json
@@ -39,7 +39,7 @@
     "AppPlist": "https://appinstallerios.com/plist/ZiniTevi.plist",
     "AppBanner": "https://appinstallerios.com/Img/ZiniTeviBanner.png",
     "Twitter": "",
-    "Website": "https://sailyteam.github.io",
+    "Website": "",
     "Screenshot1": "",
     "Screenshot2": ""
   }
