--- a/AppSlider.json
+++ b/AppSlider.json
@@ -7,8 +7,8 @@
     "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Twitter": "unc0verTeam",
     "Website": "https://unc0ver.dev",
-    "Screenshot1": "",
-    "Screenshot2": ""
+    "Screenshot1": "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
   },
   {
     "AppName": "Taurine",
@@ -18,8 +18,8 @@
     "AppBanner": "https://appinstallerios.com/Img/TaurineBanner.png",
     "Twitter": "OdysseyTeam_",
     "Website": "https://taurine.app",
-    "Screenshot1": "",
-    "Screenshot2": ""
+    "Screenshot1": "https://appinstallerios.com/Screenshots/TaurineScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/TaurineScreenshot2.png"
   },
   {
     "AppName": "Saily",
@@ -29,8 +29,8 @@
     "AppBanner": "https://appinstallerios.com/Img/SailyBanner.png",
     "Twitter": "TrySaily",
     "Website": "https://sailyteam.github.io",
-    "Screenshot1": "",
-    "Screenshot2": ""
+    "Screenshot1": "https://appinstallerios.com/Screenshots/SailyScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/SailyScreenshot2.png"
   },
     {
     "AppName": "ZiniTevi",
