--- a/AppSlider.json
+++ b/AppSlider.json
@@ -40,7 +40,7 @@
     "AppBanner": "https://appinstallerios.com/Img/ZiniTeviBanner.png",
     "Twitter": "",
     "Website": "",
-    "Screenshot1": "",
-    "Screenshot2": ""
+    "Screenshot1": "https://appinstallerios.com/Screenshots/ZiniTeviScreenshot1.png",
+    "Screenshot2": "https://appinstallerios.com/Screenshots/ZiniTeviScreenshot2.png"
   }
 ]
