--- a/AppStoreSuggestion.json
+++ b/AppStoreSuggestion.json
@@ -1,32 +1,32 @@
 [
   {
     "artworkUrl100": "https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/42/6e/2e/426e2e94-2b7c-42d2-de2c-18c0415e54d0/logo_youtube_color-0-0-1x_U007emarketing-0-0-0-6-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/100x100bb.png",
-    "id": "544007664",
+    "appid": "544007664",
     "artistName": "Google LLC",
     "name": "YouTube: Watch, Listen, Stream"
   },
   {
     "artworkUrl100": "https://is4-ssl.mzstatic.com/image/thumb/Purple112/v4/03/2f/af/032faf5f-9540-98cd-881d-a97fbbaedd07/ProductionAppIcon-1x_U007emarketing-0-7-0-0-0-85-220.png/100x100bb.png",
-    "id": "333903271",
+    "appid": "333903271",
     "artistName": "Twitter, Inc.",
     "name": "Twitter"
   },
   {
     "artworkUrl100": "https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/fd/01/d0/fd01d0f2-fbed-2aef-979b-48c311e4953d/Prod-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/100x100bb.png",
-    "id": "389801252",
+    "appid": "389801252",
     "artistName": "Instagram, Inc.",
     "name": "Instagram"
   },
   {
     "artworkUrl100": "https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/8f/58/dc/8f58dc5e-e95a-ea0b-103a-2f7fca7ec693/AppIcon_TikTok-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/100x100bb.png",
     "genres": [],
-    "id": "835599320",
+    "appid": "835599320",
     "artistName": "TikTok Ltd.",
     "name": "TikTok"
   },
   {
     "artworkUrl100": "https://is4-ssl.mzstatic.com/image/thumb/Purple126/v4/2d/07/43/2d0743ce-e5dc-2eda-fa50-987cf47f25f1/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/100x100bb.png",
-    "id": "454638411",
+    "appid": "454638411",
     "artistName": "Meta Platforms, Inc.",
     "name": "Messenger"
   }
