--- a/AppSlider.json
+++ b/AppSlider.json
@@ -8,7 +8,11 @@
     "Twitter": "unc0verTeam",
     "Website": "https://unc0ver.dev",
     "Screenshot1": "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
+    "Screenshot2": "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png",
+    "AppScreenshots": [
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
+    ]
   },
   {
     "AppName": "Taurine",
@@ -19,7 +23,11 @@
     "Twitter": "OdysseyTeam_",
     "Website": "https://taurine.app",
     "Screenshot1": "https://appinstallerios.com/Screenshots/TaurineScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/TaurineScreenshot2.png"
+    "Screenshot2": "https://appinstallerios.com/Screenshots/TaurineScreenshot2.png",
+    "AppScreenshots": [
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
+    ]
   },
   {
     "AppName": "Saily",
@@ -30,7 +38,11 @@
     "Twitter": "TrySaily",
     "Website": "https://sailyteam.github.io",
     "Screenshot1": "https://appinstallerios.com/Screenshots/SailyScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/SailyScreenshot2.png"
+    "Screenshot2": "https://appinstallerios.com/Screenshots/SailyScreenshot2.png",
+    "AppScreenshots": [
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
+    ]
   },
     {
     "AppName": "ZiniTevi",
@@ -41,6 +53,10 @@
     "Twitter": "",
     "Website": "",
     "Screenshot1": "https://appinstallerios.com/Screenshots/ZiniTeviScreenshot1.png",
-    "Screenshot2": "https://appinstallerios.com/Screenshots/ZiniTeviScreenshot2.png"
+    "Screenshot2": "https://appinstallerios.com/Screenshots/ZiniTeviScreenshot2.png",
+    "AppScreenshots": [
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot1.png",
+      "https://appinstallerios.com/Screenshots/Unc0verScreenshot2.png"
+    ]
   }
 ]
