--- a/AIapps.json
+++ b/AIapps.json
@@ -1,1 +1,14 @@
-
+[
+  {
+    "AppName": "AppleZone",
+    "AppDeveloper": "Benjamin",
+    "AppIcon": "https://icons.appinstallerios.com/Unc0verIcon.png",
+    "AppPlist": "https://appinstallerios.com/plist/unc0ver.plist",
+    "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
+    "Twitter": "UseAppleZone",
+    "Website": "https://UseAppleZone.com",
+    "AppScreenshots": [
+    ],
+    "AppSlider": true
+  }
+]
