--- a/AIapps.json
+++ b/AIapps.json
@@ -2,7 +2,7 @@
   {
     "AppName": "AppleZone",
     "AppDeveloper": "Benjamin",
-    "AppIcon": "https://icons.appinstallerios.com/Unc0verIcon.png",
+    "AppIcon": "https://useapplezone.com/AppleZoneIcon.png",
     "AppPlist": "https://appinstallerios.com/plist/unc0ver.plist",
     "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
     "Twitter": "UseAppleZone",
