--- a/AIapps.json
+++ b/AIapps.json
@@ -3,8 +3,8 @@
     "AppName": "AppleZone",
     "AppDeveloper": "Benjamin",
     "AppIcon": "https://useapplezone.com/AppleZoneIcon.png",
-    "AppPlist": "https://appinstallerios.com/plist/unc0ver.plist",
-    "AppBanner": "https://appinstallerios.com/Img/unc0verBanner.png",
+    "AppPlist": "https://appinstallerios.com/plist/AppleZone.plist",
+    "AppBanner": "https://appinstallerios.com/Img/Banner.png",
     "Twitter": "UseAppleZone",
     "Website": "https://UseAppleZone.com",
     "AppScreenshots": [
