--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -1,6 +1,6 @@
 {
-  "Text": " TV",
-  "URL": "https://tv.apple.com/offer/tvs.sbd.4000?itscg=70000&itsct=HY2_SettingsFUK_Originator_D01",
+  "Text": "TV+",
+  "URL": "cloudinstaller://",
   "SafariPopup": false,
   "Active": true
 }
