--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -1,6 +1,6 @@
 {
   "Text": "TV+",
-  "URL": "cloudinstaller://",
+  "URL": "cloudinstaller://11111111",
   "SafariPopup": false,
   "Active": true
 }
