--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -1,6 +1,6 @@
 {
   "Text": "TV+",
-  "URL": "cloudinstaller://11111111",
+  "URL": "https://tv.apple.com/offer/tvs.sbd.4000?itscg=70000&itsct=HY2_SettingsFUK_Originator_D01",
   "SafariPopup": false,
   "Active": true
 }
