--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -1,5 +1,5 @@
 {
-  "Text": "TV+",
+  "Text": "iCloud+",
   "URL": "https://tv.apple.com/offer/tvs.sbd.4000?itscg=70000&itsct=HY2_SettingsFUK_Originator_D01",
   "SafariPopup": false,
   "Active": false
