--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -2,5 +2,5 @@
   "Text": "iCloud+",
   "URL": "https://tv.apple.com/offer/tvs.sbd.4000?itscg=70000&itsct=HY2_SettingsFUK_Originator_D01",
   "SafariPopup": false,
-  "Active": false
+  "Active": true
 }
