--- a/AppStoreService.json
+++ b/AppStoreService.json
@@ -1,6 +1,6 @@
 {
-  "Text": "TV+",
-  "URL": "https://tv.apple.com/offer/tvs.sbd.4000?itscg=70000&itsct=HY2_SettingsFUK_Originator_D01",
+  "Text": "Event",
+  "URL": "https://tv.apple.com/us/video-clip/far-out/edt.item.62f31477-f4d9-4771-a39d-92945f2b3fb7",
   "SafariPopup": false,
-  "Active": false
+  "Active": true
 }
